@@ -18,6 +18,7 @@ Version 6.7.2 - not yet released
   - auto-reconnect TCP client (#3127)
 * Android
   - enable Vivante workaround for GC600 (#3184)
+  - enable cursor key navigation in dialogs (#3133)
 * Kobo
   - fix misassigned passphrase in WiFi dialog (#3151)
   - work around Kobo Touch N905B kernel crash in display driver (#3145)
